# CGAAL

./: .gitignore  Cargo.toml  README.md  mexican-standoff.json  profiling.md  test-formula.json  test.atl  test.json  test.lcgs
.github/workflows/: audit.yml  clippy.yml  rust.yml  rustfmt.yml  test.yml
atl-checker/: Cargo.toml
atl-checker/src/: analyse.rs  atl_cgs_edg.rs  com.rs  common.rs  edg.rs  emit_count.rs  hasher.rs  lib.rs  main.rs  printer.rs  simple_edg.rs  solve_dist.rs  solve_set.rs
atl-checker/src/algorithms/: mod.rs  solve_set.rs
atl-checker/src/algorithms/certain_zero/: com.rs  common.rs  mod.rs
atl-checker/src/algorithms/certain_zero/game_strategy/: enforcing.rs  error.rs  mod.rs
atl-checker/src/algorithms/certain_zero/search_strategy/: bfs.rs  dependency_heuristic.rs  dfs.rs  instability_heuristic_search.rs  linear_constrained_phi.rs  linear_constraints.rs  linear_optimize.rs  linear_programming_search.rs  linear_representative_search.rs  mod.rs
atl-checker/src/algorithms/game_strategy/: enforcing.rs  error.rs  format.rs  mod.rs  partial.rs
atl-checker/src/algorithms/global/: com.rs  mod.rs  multithread.rs  singlethread.rs
atl-checker/src/atl/: atl_cgs_edg.rs  common.rs  dependencygraph.rs  formula.rs  game_formula.rs  mod.rs  parser.rs
atl-checker/src/atl/formula/: game_formula.rs  mod.rs  parser.rs
atl-checker/src/atl/gamestructure/: eager.rs  mod.rs
atl-checker/src/edg/: annotated_edg.rs  atlcgsedg.rs  mod.rs
atl-checker/src/edg/atledg/: annotated.rs  format.rs  mod.rs  pmoves.rs  vertex.rs
atl-checker/src/game_structure/: eager.rs  mod.rs
atl-checker/src/game_structure/lcgs/: ast.rs  mod.rs  parse.rs  precedence.rs
atl-checker/src/game_structure/lcgs/ir/: error.rs  eval.rs  intermediate.rs  mod.rs  relabeling.rs  symbol_checker.rs  symbol_table.rs
atl-checker/src/gamestructure/: eager.rs
atl-checker/src/gamestructure/lcgs/: ast.rs  parse.rs  precedence.rs
atl-checker/src/gamestructure/lcgs/ir/: error.rs  eval.rs  intermediate.rs  relabeling.rs  symbol_checker.rs  symbol_table.rs
atl-checker/src/lcgs/: ast.rs  mod.rs  parse.rs
atl-checker/src/lcgs/ir/: error.rs  intermediate.rs  symbol_table.rs
atl-checker/src/parsing/: mod.rs
atl-checker/src/search_strategy/: bfs.rs  dfs.rs  linear_optimize.rs  mod.rs
benches/: benchmark_solver.rs  my_benchmark.rs  profiling.md
cgaal-cli/: Cargo.toml
cgaal-cli/src/: args.rs  load.rs  main.rs  options.rs  solver.rs  thing.rs
cgaal-engine/: Cargo.toml
cgaal-engine/src/: lib.rs  simple_edg.rs
cgaal-engine/tests/: parsing.rs  parsing_expr.rs  parsing_lcgs.rs  partial_strategy_synthesis.rs  some_test.rs
cgaal-interpreter/: Cargo.toml
cgaal-interpreter/src/: interpreter.rs  lexer.rs  lib.rs  op.rs  parser.rs  token.rs
cgaal-interpreter/src/displayer/: mod.rs
cli/: Cargo.toml
cli/src/: args.rs  main.rs  solver.rs
docs/: atl-grammar.txt
docs/lcgs/: informal ebnf PRISM-inspired-2.txt  informal ebnf PRISM-inspired.txt  informal ebnf PRISM-like.txt  informal ebnf PRISMish.txt  informal ebnf.txt
images/: details.txt
json-examples/mexican_standoff/: can_2_players_gurantee_atleast_one_of_them_survives.atl  can_2_players_gurantee_atleast_one_of_them_survives.json  can_3_players_gurantee_atleast_one_of_them_survives.atl  can_p1_guarantee_to_survive_FALSE.atl  can_p1_suicide_FALSE.atl  can_p1_suicide_FALSE.json  mexican_standoff.json
json-examples/random_generated/: est-time.txt  formulae-rename-script.fish
lcgs-examples/: README.md
lcgs-examples/Intrusion_Detection/: Intrusion_Detection.lcgs
lcgs-examples/Matching_Pennies_Game/: both_palyers_can_guarantee_that_odd_always_has_larger_sum.json  both_players_can_guarantee_that_odd_always_wins_FALSE.json  matching_pennies_game_odd_win_eventually.json
lcgs-examples/Mexican_Standoff/: Mexican_Standoff_4_2hp.lcgs  Mexican_Standoff_4_3hp.lcgs  Mexican_Standoff_5_2hp.lcgs  Mexican_Standoff_p1_is_alive_till_he_aint.json
lcgs-examples/Public_Good_Game2/: Public_Good_Game_p1_always_worth_more.json  Public_Good_Game_p1_gets_capped_before_p2.json
lcgs-examples/Rock_Paper_Scissors/: Rock_Paper_Scissors_p1_wins_eventually.json
lcgs-examples/bouncing_ball/: ball_eventually_in_air_TRUE.atl  ball_never_hit_FALSE.atl  bouncing_ball_piston.lcgs
lcgs-examples/fischer/: p1-eventually-get-access-if-requested-TRUE.json  p1-eventually-reach-CS-TRUE.json  p1_eventually_get_access_if_requested_TRUE.atl
lcgs-examples/gossipping_girls/: all_girls_ensure_that_only_player_one_gets_omicient_before_10_steps_TRUE.atl  all_omniscient_but_first_after_10_steps_TRUE.atl  all_omniscient_but_first_after_10_steps_TRUE.json  eventually_10_steps_are_passed_TRUE.atl  girl_one_gurantee_to_become_omicient_before_10_steps_FALSE.json  girl_one_gurantee_to_become_omniscient_before_10_steps_FALSE.atl  gossipping_girls_circular_4p.lcgs  gossipping_girls_circular_5p.lcgs  gossipping_girls_circular_6p.lcgs  gossipping_girls_total_network_5p.lcgs  gossipping_girls_total_network_6p.lcgs  guarantee_all_girls_eventually_become_omniscient_but_not_girl_one_TRUE.json  p123456_ensure_p1_gets_omniscient_before_10_steps_TRUE.atl  p123456_ensure_that_only_p1_gets_omniscient_before_10_steps_TRUE.atl  p123456_ensure_that_p123456_omniscient_before_10_steps_TRUE.atl  p123456_eventually_omniscient_TRUE.atl  p12345_ensure_p1_gets_omniscient_before_10_steps_TRUE.atl  p12345_ensure_that_only_p1_gets_omniscient_before_10_steps_TRUE.atl  p12345_ensure_that_p12345_omniscient_before_10_steps_TRUE.atl  p12345_eventually_omniscient_TRUE.atl  p12345_omniscient_but_first_after_10_steps_TRUE.atl  p1234_ensure_p1_gets_omniscient_before_10_steps_TRUE.atl  p1234_ensure_that_only_p1_gets_omniscient_before_10_steps_TRUE.atl  p1234_ensure_that_p1234_gets_omniscient_before_10_steps_TRUE.atl  p1234_eventually_omniscient_TRUE.atl  p1234_omniscient_but_first_after_10_steps_TRUE.atl  (+3 more)
profiling/: count-atlsolver.sh  profiling-runner.py
results/: README.md
src/: atl.rs  com.rs  common.rs  distterm.rs  edg.rs  main.rs  printer.rs  simple_edg.rs  solve_dist.rs
src/atl/: common.rs  formula.rs  (+2 more)
(+7093 files in other folders)
