[package]
name = "atl-checker"
version = "0.1.0"
authors = ["d702e20 <d702e20@cs.aau.dk>",
    "Asger Weirsøe <aweirs15@student.aau.dk>",
    "Falke Carlsen <falke.cs@gmail.com>",
    "Jacob Jenner Rasmussen <jacob@jener.dk>",
    "Lars Bo Frydenskov <lfryde17@student.aau.dk>",
    "Mathias Mehl Sørensen <mmsa17@student.aau.dk>",
    "Nicolaj Østerby Jensen <naje17@student.aau.dk>",
]
edition = "2018"

[features]
default = ["graph-printer"]
graph-printer = []
use-counts = []

[dev-dependencies]
test-env-log = { version = "0.2.5", features = ["trace"], default-features = false }
criterion = "0.3"

[[bench]]
name = "benchmark_solver"
path = "../benches/benchmark_solver.rs"
harness = false

[dependencies]
crossbeam-channel = "0.5.0"
num_cpus = "1.13.0"
pom = "3.2.0"
clap = "2.33.3"
serde = { version = "1.0.117", features = ["derive", "rc"] }
serde_json = "1.0.59"
tracing = "0.1"
tracing-subscriber = "0.2.17"
lazy_static = "1.4.0"
joinery = "2.0.0"
git-version = "0.3.4"

[target.'cfg(not(target_os = "windows"))'.dependencies]
fasthash = "0.4.0"
