[package]
name = "atl-checker"
version = "0.1.0"
authors = [
    "d702e20 <d702e20@cs.aau.dk>",
    "d802f21 <d802f21@cs.aau.dk>",
    "Asger Weirsøe <aweirs15@student.aau.dk>",
    "Falke Carlsen <falke.cs@gmail.com>",
    "Jener Rasmussen <jener@jener.dk>",
    "Lars Bo Frydenskov <lfryde17@student.aau.dk>",
    "Mathias Mehl Sørensen <mmsa17@student.aau.dk>",
    "Nicolaj Østerby Jensen <naje17@student.aau.dk>",
]
edition = "2018"

[features]
default = ["graph-printer"]
graph-printer = []
use-counts = []

[dev-dependencies]
test-env-log = { version = "0.2.5", features = ["trace"], default-features = false }
criterion = "0.3"
tracing-subscriber = "0.2.17"
serde_json = "1.0.59"
num_cpus = "1.13.0"

[[bench]]
name = "benchmark_solver"
path = "../benches/benchmark_solver.rs"
harness = false

[dependencies]
crossbeam-channel = "0.5.0"
pom = "3.2.0"
serde = { version = "1.0.117", features = ["derive", "rc"] }
tracing = "0.1"
lazy_static = "1.4.0"
joinery = "2.0.0"
minilp = "0.2.2"
priority-queue = "1.1.1"
float-ord = "0.3.1"
