[package]
name = "cgaal"
version = "2.0.2"
authors = [
    "Asger Weirsøe <asger@weircon.dk>",
    "Falke Carlsen <falkeboc@cs.aau.dk>",
    "Jener Rasmussen <jener@jener.dk>",
    "Lars Bo Frydenskov <larsbopark@gmail.com>",
    "Mathias Mehl Sørensen <mathiasmehlsoerensen@gmail.com>",
    "Nicolaj Østerby Jensen <noje@cs.aau.dk>",
]
edition = "2021"

[features]
default = ["graph-printer"]
graph-printer = []

[dependencies]
num_cpus = "1.13.1"
git-version = "0.3.5"
clap = "2.34.0"
tracing = "0.1"
tracing-subscriber = "0.2.17"
serde_json = "1.0.83"
regex = { version = "1", features = ["unicode-case"] }
humantime = "2.1.0"
cgaal-engine = { path = "../cgaal-engine", version = "2.0.0" }
