[package]
name = "cli"
version = "0.1.0"
authors = [
    "d702e20 <d702e20@cs.aau.dk>",
    "d802f21 <d802f21@cs.aau.dk>",
    "Asger Weirsøe <aweirs15@student.aau.dk>",
    "Falke Carlsen <falke.cs@gmail.com>",
    "Jener Rasmussen <jener@jener.dk>",
    "Lars Bo Frydenskov <lfryde17@student.aau.dk>",
    "Mathias Mehl Sørensen <mmsa17@student.aau.dk>",
    "Nicolaj Østerby Jensen <naje17@student.aau.dk>",
]
edition = "2018"

[dependencies]
num_cpus = "1.13.0"
git-version = "0.3.4"
clap = "2.33.3"
tracing = "0.1"
tracing-subscriber = "0.2.17"
serde_json = "1.0.59"
atl-checker = { path = "../atl-checker", version = "0.1.0"}